Added new paragraph in home page

--- a/home.html
+++ b/home.html
@@ -1,4 +1,5 @@
 <html>
 <title>This one is my home page</title>
 <h1>This one my home page of wonderful website<h1>
+<p>I have added new paragraph in home page</p>
 </html>
